@@ -455,7 +455,7 @@ lex_date(const cvs_number *n, void *, cvs_file *cvs);
 void
 atom_dir_init(void);
 
-void
+cvs_commit *
 cvs_master_digest(cvs_file *cvs, cvs_master *cm, rev_master *master);
 
 git_repo *
