@@ -2,6 +2,7 @@
 
 Repository head:
     Properly handle CVS masters with nonempty access lists.
+    Bail out gracefully on pathological masters with no revisions.
 
 1.34: 2015-09-25
     Another Python compatibility fix.
